@@ -5,14 +5,12 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
-import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
 
 import org.springframework.security.crypto.password.PasswordEncoder;
 
-import lombok.Setter;
 import sample.context.ActionStatusType;
 import sample.context.actor.type.ActorRoleType;
+import sample.context.support.IdGenerator;
 import sample.model.account.Account;
 import sample.model.account.FiAccount;
 import sample.model.account.type.AccountStatusType;
@@ -35,35 +33,11 @@ import sample.util.TimePoint;
  * It is intended for simple master data generation during testing and
  * development and is not intended for production use.
  */
-@Setter
-public class DataFixtures {
-
-    public void initializeInTxSystem() {
-        // String day = DateUtils.dayFormat(LocalDate.now());
-        // new AppSetting(Timestamper.KeyDay, "system", "営業日", day).save(repSystem);
-    }
-
-    public void initializeInTx() {
-        // String ccy = "JPY";
-        // LocalDate baseDay = businessDay.day();
-
-        // // 社員: admin (passも同様)
-        // staff("admin").save(rep);
-
-        // // 自社金融機関
-        // selfFiAcc(Remarks.CashOut, ccy).save(rep);
-
-        // // 口座: sample (passも同様)
-        // String idSample = "sample";
-        // acc(idSample).save(rep);
-        // login(idSample).save(rep);
-        // fiAcc(idSample, Remarks.CashOut, ccy).save(rep);
-        // cb(idSample, baseDay, ccy, "1000000").save(rep);
-    }
+public abstract class DataFixtures {
 
     // account
 
-    public static Account acc(String accountId) {
+    public static Account account(String accountId) {
         Account m = new Account();
         m.setAccountId(accountId);
         m.setName(accountId);
@@ -93,7 +67,7 @@ public class DataFixtures {
 
     // asset
 
-    public CashBalance cb(String accountId, LocalDate baseDay, String currency, String amount) {
+    public static CashBalance cb(String accountId, LocalDate baseDay, String currency, String amount) {
         var m = new CashBalance();
         m.setAccountId(accountId);
         m.setBaseDay(baseDay);
@@ -103,16 +77,16 @@ public class DataFixtures {
         return m;
     }
 
-    public Cashflow cf(String accountId, String amount, LocalDate eventDay, LocalDate valueDay) {
+    public static Cashflow cf(String accountId, String amount, LocalDate eventDay, LocalDate valueDay) {
         return cfReg(accountId, amount, valueDay).create(TimePoint.of(eventDay));
     }
 
-    public RegCashflow cfReg(String accountId, String amount, LocalDate valueDay) {
+    public static RegCashflow cfReg(String accountId, String amount, LocalDate valueDay) {
         return RegCashflow.builder()
                 .accountId(accountId)
                 .currency("JPY")
                 .amount(new BigDecimal(amount))
-                .cashflowType(CashflowType.CashIn)
+                .cashflowType(CashflowType.CASH_IN)
                 .remark("cashIn")
                 .eventDay(null)
                 .valueDay(valueDay)
@@ -123,7 +97,8 @@ public class DataFixtures {
      * Simplified generation of transfer deposit/withdrawal requests.
      * [Event date (T+1)/Delivery date (T+3)].
      */
-    public CashInOut cio(
+    public static CashInOut cio(
+            IdGenerator uid,
             BusinessDayHandler businessDay,
             String accountId,
             String absAmount,
@@ -131,6 +106,7 @@ public class DataFixtures {
         var day = businessDay.day();
         var date = day.atStartOfDay();
         CashInOut m = new CashInOut();
+        m.setCashInOutId(uid.generate(CashInOut.class));
         m.setAccountId(accountId);
         m.setCurrency("JPY");
         m.setAbsAmount(new BigDecimal(absAmount));
@@ -149,7 +125,7 @@ public class DataFixtures {
 
     // master
 
-    public Staff staff(String staffId) {
+    public static Staff staff(String staffId) {
         var m = new Staff();
         m.setStaffId(staffId);
         m.setName(staffId);
@@ -157,14 +133,12 @@ public class DataFixtures {
     }
 
     public static List<StaffAuthority> staffAuth(String staffId, String... authority) {
-        var idx = new AtomicLong(0);
         return Arrays.stream(authority).map((auth) -> {
             var m = new StaffAuthority();
-            m.setId(idx.getAndIncrement());
             m.setStaffId(staffId);
             m.setAuthority(auth);
             return m;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     public static SelfFiAccount selfFiAcc(String category, String currency) {
@@ -180,7 +154,7 @@ public class DataFixtures {
         Holiday m = new Holiday();
         m.setCategory(Holiday.CategoryDefault);
         m.setName("休日サンプル");
-        m.setHoliday(DateUtils.day(dayStr));
+        m.setDay(DateUtils.day(dayStr));
         return m;
     }
 
